Add abilty to configure postStart handler for teleport-cluster chart (#7168)
Co-authored-by: Gus Luxton <gus@goteleport.com>

--- a/examples/chart/teleport-cluster/values.yaml
+++ b/examples/chart/teleport-cluster/values.yaml
@@ -203,6 +203,11 @@ initContainers: []
 #  image: "alpine"
 #  args: ["echo test"]
 
+# If set, will run the command as a postStart handler
+# https://kubernetes.io/docs/tasks/configure-pod-container/attach-handler-lifecycle-event/
+postStart:
+  command: []
+
 # Resources to request for each pod in the deployment
 # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
 resources: {}
