--- a/examples/chart/teleport-kube-agent/values.yaml
+++ b/examples/chart/teleport-kube-agent/values.yaml
@@ -88,6 +88,9 @@ storage:
 # Container image for the agent. Since this runs without the auth_service, we
 # don't need the enterprise version.
 image: quay.io/gravitational/teleport
+# Optional array of imagePullSecrets, to use when pulling from a private registry
+imagePullSecrets: []
+# - name: myRegistryKeySecretName
 # Number of replicas for the agent deployment.
 replicaCount: 1
 # (optional) Override the name of the ClusterRole used by the agent's service account.
