helm: Set correct fsGroup in teleport-kube-agent chart when using persistent storage (#7804)
Co-authored-by: Gus Luxton <gus@goteleport.com>

--- a/examples/chart/teleport-cluster/templates/config.yaml
+++ b/examples/chart/teleport-cluster/templates/config.yaml
@@ -50,7 +50,7 @@ data:
   {{- end }}
   {{- if .Values.labels }}
       labels:
-    {{ toYaml .Values.labels | indent 8 }}
+    {{- toYaml .Values.labels | nindent 8 }}
   {{- end }}
     proxy_service:
       public_addr: '{{ required "clusterName is required in chart values" .Values.clusterName }}:443'
