--- a/docs/config.json
+++ b/docs/config.json
@@ -281,6 +281,13 @@
     "terraform": {
       "version": "0.12.0"
     },
+    "presets": {
+      "tokens": {
+        "first": "abcd123-insecure-do-not-use-this",
+        "second": "efgh456-insecure-do-not-use-this",
+        "third": "ijkl789-insecure-do-not-use-this"
+      }
+    },
     "fedramp": {
       "control_url": "https://csrc.nist.gov/Projects/risk-management/sp800-53-controls/release-search#!/control?version=5.1&number="
     },
@@ -301,6 +308,9 @@
       "compose": {
         "version": "1.25.0"
       }
+    },
+    "helm": {
+      "version": "3.4.2"
     },
     "kubernetes": {
       "major_version": "1",
