--- a/examples/chart/teleport-kube-agent/templates/statefulset.yaml
+++ b/examples/chart/teleport-kube-agent/templates/statefulset.yaml
@@ -1,25 +1,22 @@
 #
-# Warning to maintainers, any changes to this file that are not specific to the Deployment need to also be duplicated
-# in the statefulset.yaml file.
+# Warning to maintainers, any changes to this file that are not specific to the StatefulSet need to also be duplicated
+# in the deployment.yaml file.
 #
-{{- if not .Values.storage.enabled }}
+{{- if .Values.storage.enabled }}
 {{- if .Values.teleportVersionOverride }}
   {{- $_ := set . "teleportVersion" .Values.teleportVersionOverride }}
 {{- else }}
   {{- $_ := set . "teleportVersion" .Chart.Version }}
 {{- end }}
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
   labels:
     app: {{ .Release.Name }}
-  {{- if .Values.annotations.deployment }}
-  annotations:
-    {{- toYaml .Values.annotations.deployment | nindent 4 }}
-  {{- end }}
 spec:
+  serviceName: {{ .Release.Name }}
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
@@ -43,10 +40,6 @@ spec:
       tolerations:
         {{- toYaml .Values.tolerations | nindent 6 }}
       {{- end }}
-{{- if .Values.imagePullSecrets }}
-      imagePullSecrets:
-{{ toYaml .Values.imagePullSecrets | indent 6 }}
-{{- end }}
 {{- if .Values.initContainers }}
       initContainers: {{- toYaml .Values.initContainers | nindent 6 }}
   {{- if .Values.resources }}
@@ -74,6 +67,7 @@ spec:
     {{- toYaml .Values.extraVolumeMounts | nindent 8 }}
   {{- end }}
 {{- end }}
+      serviceAccountName: {{ .Values.serviceAccountName | default .Release.Name }}
       {{- if .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml .Values.nodeSelector | nindent 8 }}
@@ -124,7 +118,7 @@ spec:
           name: "auth-token"
           readOnly: true
         - mountPath: /var/lib/teleport
-          name: {{ default "data" .Values.existingDataVolume }}
+          name: "{{ .Release.Name }}-teleport-data"
 {{- if .Values.extraVolumeMounts }}
   {{- toYaml .Values.extraVolumeMounts | nindent 8 }}
 {{- end }}
@@ -135,12 +129,16 @@ spec:
       - name: "auth-token"
         secret:
           secretName: {{ .Values.secretName }}
-      {{- if not .Values.existingDataVolume }}
-      - name: "data"
-        emptyDir: {}
-      {{- end }}
 {{- if .Values.extraVolumes }}
   {{- toYaml .Values.extraVolumes | nindent 6 }}
 {{- end }}
-      serviceAccountName: {{ .Values.serviceAccountName | default .Release.Name }}
+  volumeClaimTemplates:
+  - metadata:
+      name: "{{ .Release.Name }}-teleport-data"
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      storageClassName: {{ .Values.storage.storageClassName }}
+      resources:
+        requests:
+          storage: {{ .Values.storage.requests }}
 {{- end }}
