--- a/.drone.yml
+++ b/.drone.yml
@@ -1230,7 +1230,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:188
+# Generated at dronegen/tag.go:205
 ################################################
 
 kind: pipeline
@@ -1334,7 +1334,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:188
+# Generated at dronegen/tag.go:205
 ################################################
 
 kind: pipeline
@@ -1438,7 +1438,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:188
+# Generated at dronegen/tag.go:205
 ################################################
 
 kind: pipeline
@@ -1545,7 +1545,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:330
+# Generated at dronegen/tag.go:347
 ################################################
 
 kind: pipeline
@@ -1677,7 +1677,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:330
+# Generated at dronegen/tag.go:347
 ################################################
 
 kind: pipeline
@@ -1806,7 +1806,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:330
+# Generated at dronegen/tag.go:347
 ################################################
 
 kind: pipeline
@@ -1924,7 +1924,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:330
+# Generated at dronegen/tag.go:347
 ################################################
 
 kind: pipeline
@@ -2039,7 +2039,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:188
+# Generated at dronegen/tag.go:205
 ################################################
 
 kind: pipeline
@@ -2143,7 +2143,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:330
+# Generated at dronegen/tag.go:347
 ################################################
 
 kind: pipeline
@@ -2275,7 +2275,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:330
+# Generated at dronegen/tag.go:347
 ################################################
 
 kind: pipeline
@@ -2792,7 +2792,7 @@ steps:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:188
+# Generated at dronegen/tag.go:205
 ################################################
 
 kind: pipeline
@@ -2896,7 +2896,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:188
+# Generated at dronegen/tag.go:205
 ################################################
 
 kind: pipeline
@@ -3000,7 +3000,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:330
+# Generated at dronegen/tag.go:347
 ################################################
 
 kind: pipeline
@@ -3118,7 +3118,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:330
+# Generated at dronegen/tag.go:347
 ################################################
 
 kind: pipeline
@@ -3236,7 +3236,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:330
+# Generated at dronegen/tag.go:347
 ################################################
 
 kind: pipeline
@@ -3368,7 +3368,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:330
+# Generated at dronegen/tag.go:347
 ################################################
 
 kind: pipeline
@@ -3500,7 +3500,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:188
+# Generated at dronegen/tag.go:205
 ################################################
 
 kind: pipeline
@@ -3555,7 +3555,9 @@ steps:
   - apk add --no-cache make
   - chown -R $UID:$GID /go
   - cd /go/src/github.com/gravitational/teleport
+  - echo -n "$WINDOWS_SIGNING_CERT" | base64 -d > windows-signing-cert.pfx
   - make -C build.assets release-amd64
+  - rm -f windows-signing-cert.pfx
   environment:
     ARCH: amd64
     GID: "1000"
@@ -3563,6 +3565,8 @@ steps:
     GOPATH: /go
     OS: windows
     UID: "1000"
+    WINDOWS_SIGNING_CERT:
+      from_secret: WINDOWS_SIGNING_CERT
   volumes:
   - name: dockersock
     path: /var/run
@@ -4381,6 +4385,6 @@ volumes:
       name: drone-s3-debrepo-pvc
 ---
 kind: signature
-hmac: 94c64c4b8eb79102ae9e2a619ffdfc76f232ce49b29eb042f907bedd6c26f74e
+hmac: a5dcc4fbacca0f715431c7eafa1b889222654d89e2d5e1cc0870ce54f0fac042
 
 ...
