Sign tsh.exe on tag builds (#7897)
* Sign tsh.exe on tag builds

This adds a Makefile step to sign tsh.exe when the
`$WINDOWS_SIGNING_CERTIFICATE` env var is set to a base64-encoded
pkcs12 code signing certificate. The certificate must not be password
protected.

This includes a sample cert (`cert-dummy.pfx`) for CI pipeline
testing. It should be removed in any eventual PR, along with the
other modifications to the drone pipeline. The cert is imported into
the environment in the `Makefile` for testing purposes; in practice
it will be imported from a secure secret store (drone secrets, etc).

* Improve Windows code signing

 - Split signing into a separate step; `release-windows-unsigned` now
   performs the build, `release-windows` signs the binary.
 - Require `release-windows` to successfully generate a signed
   binary.
 - Clearly mark unsigned binaries and archives as such.
 - Guard against stdout secret leakage in Makefiles.
 - Move temporary cert data from Makefile into dronegen to test
   full pipeline.

* Use an invalid cert string for testing purposes.

* Pass certs to the build process via a statically named file

Signed Windows builds now depend on a `.gitignore`'d
`windows-signing-cert.pfx` at the root of the source directory. This
should ease testing and help avoid accidental secret leakage.

* Use production secret

* Remove windows-signing-cert.pfx before continuing to the next step

Additionally, fix variable reference as the bracket syntax does not
seem to play nice with Drone.

* Update .gitignore

Co-authored-by: Andrew Lytvynov <andrew@goteleport.com>

Co-authored-by: Andrew Lytvynov <andrew@goteleport.com>

--- a/.drone.yml
+++ b/.drone.yml
@@ -1315,7 +1315,7 @@ steps:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:190
+# Generated at dronegen/tag.go:207
 ################################################
 
 kind: pipeline
@@ -1419,7 +1419,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:190
+# Generated at dronegen/tag.go:207
 ################################################
 
 kind: pipeline
@@ -1523,7 +1523,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:190
+# Generated at dronegen/tag.go:207
 ################################################
 
 kind: pipeline
@@ -1630,7 +1630,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:332
+# Generated at dronegen/tag.go:349
 ################################################
 
 kind: pipeline
@@ -1762,7 +1762,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:332
+# Generated at dronegen/tag.go:349
 ################################################
 
 kind: pipeline
@@ -1891,7 +1891,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:332
+# Generated at dronegen/tag.go:349
 ################################################
 
 kind: pipeline
@@ -2009,7 +2009,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:332
+# Generated at dronegen/tag.go:349
 ################################################
 
 kind: pipeline
@@ -2124,7 +2124,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:190
+# Generated at dronegen/tag.go:207
 ################################################
 
 kind: pipeline
@@ -2228,7 +2228,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:332
+# Generated at dronegen/tag.go:349
 ################################################
 
 kind: pipeline
@@ -2360,7 +2360,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:332
+# Generated at dronegen/tag.go:349
 ################################################
 
 kind: pipeline
@@ -2857,7 +2857,7 @@ steps:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:190
+# Generated at dronegen/tag.go:207
 ################################################
 
 kind: pipeline
@@ -2961,7 +2961,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:190
+# Generated at dronegen/tag.go:207
 ################################################
 
 kind: pipeline
@@ -3065,7 +3065,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:332
+# Generated at dronegen/tag.go:349
 ################################################
 
 kind: pipeline
@@ -3183,7 +3183,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:332
+# Generated at dronegen/tag.go:349
 ################################################
 
 kind: pipeline
@@ -3301,7 +3301,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:332
+# Generated at dronegen/tag.go:349
 ################################################
 
 kind: pipeline
@@ -3433,7 +3433,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:332
+# Generated at dronegen/tag.go:349
 ################################################
 
 kind: pipeline
@@ -3565,7 +3565,7 @@ volumes:
 ################################################
 # Generated using dronegen, do not edit by hand!
 # Use 'make dronegen' to update.
-# Generated at dronegen/tag.go:190
+# Generated at dronegen/tag.go:207
 ################################################
 
 kind: pipeline
@@ -3620,7 +3620,9 @@ steps:
   - apk add --no-cache make
   - chown -R $UID:$GID /go
   - cd /go/src/github.com/gravitational/teleport
+  - echo -n "$WINDOWS_SIGNING_CERT" | base64 -d > windows-signing-cert.pfx
   - make -C build.assets release-amd64
+  - rm -f windows-signing-cert.pfx
   environment:
     ARCH: amd64
     GID: "1000"
@@ -3628,6 +3630,8 @@ steps:
     GOPATH: /go
     OS: windows
     UID: "1000"
+    WINDOWS_SIGNING_CERT:
+      from_secret: WINDOWS_SIGNING_CERT
   volumes:
   - name: dockersock
     path: /var/run
@@ -4403,6 +4407,6 @@ volumes:
       name: drone-s3-debrepo-pvc
 ---
 kind: signature
-hmac: dcc8d39c76a5ed7e66a610fc94f72f86ab3d0cd28b44bba7aea23d522a528488
+hmac: f3db6cde11f807c6622da19eade0ecb7d0bdb142670bca323f5dcbaf1ce72454
 
 ...
